--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,13 +36,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_webview_plugin: ^0.4.0
+#  flutter_webview_plugin: ^0.4.0
 #  flutter_insta: ^1.0.1
 #  instagram_basic_display_api: ^1.0.1
   http: ^0.13.5
   get: ^4.6.5
   lazy_load_scrollview: ^1.3.0
-  video_player: ^2.5.1
+#  video_player: ^2.5.1
+#  chewie: ^1.3.6
 
 dev_dependencies:
   flutter_test:
