--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,14 @@ dependencies:
   http: ^0.13.5
   get: ^4.6.5
   lazy_load_scrollview: ^1.3.0
-#  video_player: ^2.5.1
-#  chewie: ^1.3.6
+  video_player: ^2.5.1
+  chewie: ^1.3.6
+  flutter_login_facebook: ^1.7.0
+  flutter_facebook_auth: ^5.0.7
+  firebase_core: ^2.4.1
+  firebase_auth: ^4.2.5
+  cloud_firestore: ^4.3.1
+
 
 dev_dependencies:
   flutter_test:
