--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   firebase_core: ^2.4.1
   firebase_auth: ^4.2.5
   cloud_firestore: ^4.3.1
+#  flutter_webview_plugin:
+  webview_flutter: ^4.0.2
+  url_launcher: ^6.1.8
 
 
 dev_dependencies:
